# ocultum

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.ehatrom  Makefile  README.md  build_and_run.sh  build_on_remote.sh  ci.sh  cross_compile.sh  docker_build_run.sh  ocultum  upload_and_run.sh
.cargo/: config.toml
.github/workflows/: codeql.yml  ehatrom-rust.yml  main.yml  ocultum-release.yml  ocultum-rust.yml
ehatrom/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  bare_metal_analysis.md  bare_metal_implementation_complete.md  demo_detect.md  iteration_complete_report.md  questions_answered.md  readme_rus.md  update_and_run.md  update_and_run.sh
ehatrom/.github/workflows/: rust.yml
ehatrom/examples/: bare_metal_example.rs  create_advanced.rs  create_custom_atoms.rs  create_simple.rs  create_test.rs
ehatrom/src/: detect.rs  lib.rs  main.rs
ehatrom/src/utils/: crc32.rs
ehatrom/tests/: crc32_performance.rs  empty_eeprom.rs  full_eeprom.rs  perf_test.rs
ehatrom/tests/data/: advanced.eep  custom_atoms.eep  simple.eep  test.eep
sim800rs/: Cargo.toml  README.md
sim800rs/src/: lib.rs
src/: detect.rs  eeprom.rs  main.rs  ssd1306.rs
src/adapters/: ehatrom_adapter.rs  mod.rs  ssd1306_adapter.rs
src/core/: domain.rs  service.rs
src/ports/: mod.rs
