[package]
name = "ehatrom"
version = "0.2.0"
edition = "2024"
description = "EEPROM HAT library for Raspberry Pi HATs (serialization, I2C, CRC32, custom atoms)"
repository = "https://github.com/4stm4/ocultum"
homepage = "https://github.com/4stm4/ocultum"
documentation = "https://docs.rs/ehatrom"
keywords = ["raspberry-pi", "eeprom", "hat", "i2c", "crc32"]
categories = ["embedded", "hardware-support"]
readme = "README.md"
license = "MIT"
authors = ["Alekei Zakharchenko <ehatrom@4stm4.ru>"]
exclude = [
  "tests/*",
  "Dockerfile*",
  "update_and_run.sh",
  "update_and_run.md",
  ".github/*"
]

[dependencies]
crc32fast = "1.4"
i2cdev = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_xml_rs = "0.5"

[features]
default = []
linux = ["i2cdev"]
